--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "static-site-boilerplate",
+  "description": "typescript template",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:MudOnTire/static-site-boilerplate.git",
