--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "sass-loader": "^8.0.2",
     "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
