--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   "license": "MIT",
   "scripts": {
     "start": "cross-env TARGET=development webpack-dev-server --config config/webpack.dev.js --open",
-    "build": "cross-env TARGET=production webpack --config config/webpack.prod.js"
+    "build": "cross-env TARGET=production webpack --config config/webpack.prod.js",
+    "add:page": "node ./scripts/addPage.js",
+    "add:comp": "node ./scripts/addComponent.js"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
+    "chalk": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.1",
     "cross-env": "^7.0.2",
