--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "13851731474 <13851731474@localhost>",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env TARGET=development webpack-dev-server --config config/webpack.dev.js --open",
+    "start": "cross-env TARGET=development node ./scripts/start.js",
     "build": "cross-env TARGET=production webpack --config config/webpack.prod.js",
     "add:page": "node ./scripts/addPage.js",
     "add:comp": "node ./scripts/addComponent.js"
